--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,6 +12,19 @@
       "32": "assets/osmosmemo-icon-32.png"
     }
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content-script.js"
+      ]
+    }
+  ],
+  "background": {
+    "scripts": ["background.js"]
+  },
   "options_ui": {
     "page": "options.html"
   },
@@ -20,7 +33,10 @@
     "96": "assets/osmosmemo-icon-96.png",
     "128": "assets/osmosmemo-icon-128.png"
   },
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["activeTab", "storage",  "contextMenus"],
+  "web_accessible_resources": [
+    "popup.html"
+  ],
   "browser_specific_settings": {
     "gecko": {
       "id": "osmosmemo@osmoscraft.org"
